# spin-dapr-samples

./: .gitignore
pubsub/: spin.toml
pubsub/checkout/: README.md  package-lock.json  package.json
pubsub/checkout/src/: index.ts
pubsub/dapr/: dapr.yaml  observability.yaml  pubsub.yaml
pubsub/order-processor/: README.md  package.json
pubsub/order-processor/src/: index.ts
service-invocation/checkout/: README.md  package.json  spin.toml
service-invocation/checkout/src/: index.ts
service-invocation/dapr/: dapr.yaml
service-invocation/order-processor/: README.md  package-lock.json  package.json  spin.toml
service-invocation/order-processor/src/: index.ts
state-management/: Cargo.toml  spin.toml
state-management/dapr/: dapr.yaml  resiliency.yaml  statestore.yaml
state-management/src/: lib.rs
