[package]
name = "state-management"
authors = ["Radu Matei <radu@fermyon.com>"]
description = "Spin application demonstrating Dapr state management"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main" }

[workspace]
